--- a/gis_web/index.html
+++ b/gis_web/index.html
@@ -17,16 +17,42 @@
                 <div id="map"></div>
             </div>
             <div class="right-component">
+                <!-- Basemap Controller -->
                 <div class="title">
-                    <span>Layer Controller</span>
+                    <span>Basemap Controller</span>
                 </div>
                 <div class="form">
                     <div class="form-option">
                         <div class="checkbox">
-                            <input type="checkbox" name="osm" value="Open Street Map" checked onchange="toggleLayer(event)">
+                            <input type="radio" name="basemap" value="Open Street Map" checked onchange="toggleTilemap(event)">
                         </div>
                         <div class="label">Open Street Map</div>
                     </div>
+                    <div class="form-option">
+                        <div class="checkbox">
+                            <input type="radio" name="basemap" value="Satellite Map" onchange="toggleTilemap(event)">
+                        </div>
+                        <div class="label">Satellite Map</div>
+                    </div>
+                    <!-- <div class="form-option">
+                        <div class="checkbox">
+                            <input type="radio" name="basemap" value="Mapbox" onchange="toggleTilemap(event)">
+                        </div>
+                        <div class="label">Mapbox</div>
+                    </div> -->
+                    <div class="form-option">
+                        <div class="checkbox">
+                            <input type="radio" name="basemap" value="None" onchange="toggleTilemap(event)">
+                        </div>
+                        <div class="label">None</div>
+                    </div>
+                </div>
+                <hr>
+                <!-- Layers Controller -->
+                <div class="title">
+                    <span>Layer Controller</span>
+                </div>
+                <div class="form">
                     <div class="form-option">
                         <div class="checkbox">
                             <input type="checkbox" name="provinces" value="VietNam Province" checked onchange="toggleLayer(event)">
@@ -40,6 +66,7 @@
                         <div class="label">Districts</div>
                     </div>
                 </div>
+                <hr>
             </div>
         </div>
     </div>
