--- a/gis_web/index.html
+++ b/gis_web/index.html
@@ -15,6 +15,10 @@
         <div class="body-component">
             <div class="left-component">
                 <div id="map"></div>
+                <div id="popup" class="ol-popup">
+                    <a href="#" id="popup-closer" class="ol-popup-closer"></a>
+                    <div id="popup-content"></div>                    
+                </div>
             </div>
             <div class="right-component">
                 <!-- Basemap Controller -->
@@ -71,6 +75,7 @@
         </div>
     </div>
     <script src="./resources/ol/ol.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./main.js"></script>
 </body>
 </html>
